--- a/Application_Paserelle/mainwindow.ui
+++ b/Application_Paserelle/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Nouveau Nom Paserelle :</string>
+     <string>Nouveau Nom Centrale de mesure :</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="gatewayNameEdit">
@@ -40,8 +40,8 @@
    <widget class="QPushButton" name="AppliquerModification">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>650</y>
+      <x>240</x>
+      <y>540</y>
       <width>171</width>
       <height>41</height>
      </rect>
@@ -164,43 +164,17 @@
      <string>Nouvelle Adresse de serveur DNS :</string>
     </property>
    </widget>
-   <widget class="QLabel" name="TimeZoneLabel">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>430</y>
-      <width>191</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Time zone de la paserelle :</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="DHCPLabel">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>490</y>
+      <y>420</y>
       <width>191</width>
       <height>51</height>
      </rect>
     </property>
     <property name="text">
      <string>DHCP :</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="EtatModbusLabel">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>540</y>
-      <width>191</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Modbus :</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="ipAddressPaserelleEdit">
@@ -237,28 +211,8 @@
     <property name="geometry">
      <rect>
       <x>250</x>
-      <y>500</y>
+      <y>430</y>
       <width>151</width>
-      <height>31</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QComboBox" name="comboBoxModbus">
-    <property name="geometry">
-     <rect>
-      <x>250</x>
-      <y>550</y>
-      <width>151</width>
-      <height>31</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QComboBox" name="comboBoxTimeZone">
-    <property name="geometry">
-     <rect>
-      <x>250</x>
-      <y>440</y>
-      <width>181</width>
       <height>31</height>
      </rect>
     </property>
@@ -335,75 +289,6 @@
      </rect>
     </property>
    </widget>
-   <widget class="QLabel" name="status1">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>160</y>
-      <width>191</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Status du Capteur N°1 : </string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="status2">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>220</y>
-      <width>191</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Status du Capteur N°2 : </string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="status3">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>290</y>
-      <width>191</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Status du Capteur N°3 : </string>
-    </property>
-   </widget>
-   <widget class="QComboBox" name="comboBoxStatus1">
-    <property name="geometry">
-     <rect>
-      <x>250</x>
-      <y>170</y>
-      <width>151</width>
-      <height>31</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QComboBox" name="comboBoxStatus2">
-    <property name="geometry">
-     <rect>
-      <x>250</x>
-      <y>230</y>
-      <width>151</width>
-      <height>31</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QComboBox" name="comboBoxStatus3">
-    <property name="geometry">
-     <rect>
-      <x>250</x>
-      <y>300</y>
-      <width>151</width>
-      <height>31</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QLabel" name="TypeCharge">
     <property name="geometry">
      <rect>
@@ -440,19 +325,6 @@
      <string>Valeur de periode de mesure moyen (en minute) :</string>
     </property>
    </widget>
-   <widget class="QLabel" name="PeriodeIntegrationCourbe">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>220</y>
-      <width>411</width>
-      <height>51</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Valeur de periode de mise a jour de courbe des charges (en minute) :</string>
-    </property>
-   </widget>
    <widget class="QLineEdit" name="PeriodeIntegrationMoyEdit">
     <property name="geometry">
      <rect>
@@ -463,21 +335,11 @@
      </rect>
     </property>
    </widget>
-   <widget class="QLineEdit" name="PeriodeIntegrationCourbeEdit">
-    <property name="geometry">
-     <rect>
-      <x>450</x>
-      <y>230</y>
-      <width>161</width>
-      <height>31</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QLabel" name="NameDomaine">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>600</y>
+      <y>490</y>
       <width>101</width>
       <height>41</height>
      </rect>
@@ -490,7 +352,7 @@
     <property name="geometry">
      <rect>
       <x>250</x>
-      <y>610</y>
+      <y>490</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -519,6 +381,19 @@
      </rect>
     </property>
    </widget>
+   <widget class="QPushButton" name="OFFButton">
+    <property name="geometry">
+     <rect>
+      <x>240</x>
+      <y>600</y>
+      <width>161</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Redemarrage</string>
+    </property>
+   </widget>
    <zorder>measureModelButton</zorder>
    <zorder>acquisitionModelButton</zorder>
    <zorder>modifyGatewayButton</zorder>
@@ -531,37 +406,26 @@
    <zorder>ipAddressPaserelleLabel</zorder>
    <zorder>ipAddressMaskLabel</zorder>
    <zorder>ipAddressDNSLabel</zorder>
-   <zorder>TimeZoneLabel</zorder>
    <zorder>DHCPLabel</zorder>
-   <zorder>EtatModbusLabel</zorder>
    <zorder>ipAddressPaserelleEdit</zorder>
    <zorder>ipAddressMaskEdit</zorder>
    <zorder>ipAddressDNSEdit</zorder>
    <zorder>comboBoxDHCP</zorder>
-   <zorder>comboBoxModbus</zorder>
-   <zorder>comboBoxTimeZone</zorder>
    <zorder>NameModeleAquisitionLabel</zorder>
    <zorder>NameModeleAcquisitionEdit</zorder>
    <zorder>returnButton2</zorder>
    <zorder>returnButton3</zorder>
    <zorder>PeriodeIntegrationInst</zorder>
    <zorder>PeriodeIntegrationInstEdit</zorder>
-   <zorder>status1</zorder>
-   <zorder>status2</zorder>
-   <zorder>status3</zorder>
-   <zorder>comboBoxStatus1</zorder>
-   <zorder>comboBoxStatus2</zorder>
-   <zorder>comboBoxStatus3</zorder>
    <zorder>TypeCharge</zorder>
    <zorder>comboBoxCharge</zorder>
    <zorder>PeriodeIntegrationMoy</zorder>
-   <zorder>PeriodeIntegrationCourbe</zorder>
    <zorder>PeriodeIntegrationMoyEdit</zorder>
-   <zorder>PeriodeIntegrationCourbeEdit</zorder>
    <zorder>NameDomaine</zorder>
    <zorder>NameDomaineEdit</zorder>
    <zorder>PrimaryKeylabel</zorder>
    <zorder>PrimaryKey</zorder>
+   <zorder>OFFButton</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
